# dazzle

./: CLAUDE.md  README.md
.claude/: settings.json
3dprinted/: baffle-mini.scad  baffle-mini.stl  baffle.scad
docs/scenes/: README.md  authoring.md
firmware/: Cargo.toml  memory.x
firmware/docs/: README.md  gotchas.md  performance.md  pico-pinout.md  pico-port.md  wifi-onboarding.md
firmware/src/: display.rs  improv.rs  lib.rs  net.rs  scene.rs
renderer/: Cargo.toml  README.md
renderer/src/: lib.rs  vm.rs
web/: README.md  package.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
web/improv-test/: index.html
web/src/: app.css
web/src/lib/components/: CodeEditor.svelte  CostBadge.svelte  Preview.svelte  UniformControls.svelte
web/src/lib/components/ui/: Checkbox.svelte  Select.svelte  Slider.svelte
web/src/lib/scene/: ast.ts  builtins.ts  cost.ts  editor-lang.ts  emit.ts  examples.ts  index.ts  interpreter.ts  lexer.ts  opcodes.ts  parser.ts  renderer.ts  wasm-renderer.ts
web/src/routes/: +layout.svelte  +page.svelte
